<resources>
    <string name="google_cloud_server_client_id">881447754529-oenvfnnfjbb36jp0kj3eo4k28aljb639.apps.googleusercontent.com</string>
    <string name="app_name">Mala.Mi</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="playing_audio">Playing audio</string>
    <string name="audio_is_playing_in_the_background">Audio is playing in the background</string>
    <string name="audio_artwork">Audio Artwork</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="toggle_progress_visibility">Toggle progress visibility</string>
    <string name="open">Open</string>
</resources>

<!--
certificates
payment integration
Signup/signin with google
courses to audio playlist
AI Explainability
Learning plan and reminders
settings -> update learning styles, notification prefs ...
X course images
-->