<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/audio_artwork"
        android:src="@drawable/ic_music_note" />

    <TextView
        android:id="@+id/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/notification_icon"
        android:layout_alignParentTop="true"
        android:text="@string/playing_audio"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingHorizontal="8dp" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/notification_icon"
        android:layout_below="@id/notification_title"
        android:text="@string/audio_is_playing_in_the_background"
        android:textSize="12sp"
        android:paddingHorizontal="8dp" />
</RelativeLayout>
