<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/notification_large_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/audio_artwork"
        android:src="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/toggle_progress_visibility"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/toggle_progress_visibility"
        android:src="@drawable/baseline_keyboard_arrow_down_24"
        android:focusable="true"
        android:clickable="true"/>

    <TextView
        android:id="@+id/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/notification_large_icon"
        android:layout_toStartOf="@+id/toggle_progress_visibility"
        android:layout_alignParentTop="true"
        android:text="@string/playing_audio"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingHorizontal="8dp" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/notification_large_icon"
        android:layout_below="@id/notification_title"
        android:text="@string/audio_is_playing_in_the_background"
        android:layout_toStartOf="@+id/notification_actions"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:paddingHorizontal="8dp" />

    <LinearLayout
        android:id="@+id/notification_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_title"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notification_skip_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_skip_previous" />

        <ImageView
            android:id="@+id/notification_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_play_arrow" />

        <ImageView
            android:id="@+id/notification_skip_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_skip_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_actions_expanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_text"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/expanded_notification_skip_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_skip_previous" />

        <ImageView
            android:id="@+id/expanded_notification_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_play_arrow" />

        <ImageView
            android:id="@+id/expanded_notification_skip_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_skip_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_actions_expanded"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/notification_progress"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:max="100"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/custom_progress_drawable" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_marginVertical="6dp">
            <TextView
                android:id="@+id/time_elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:paddingHorizontal="8dp" />

            <TextView
                android:id="@+id/time_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:layout_alignParentEnd="true"
                android:paddingHorizontal="8dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
